src/objects/Document_Type__c.object
<CustomObject>
    <description>An object for storing all document types. This is not to be confused with document prototypes (i.e. image/jpeg, document/pdf, etc)</description>
    <fields>
        <fullName>Allow_use_of_Umbrella_Level_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow use of Umbrella Level Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A description for the document type.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type_Name__c</fullName>
        <label>Document Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEAD_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LEAD Configuration</label>
        <referenceTo>LEAD_Configuration__c</referenceTo>
        <relationshipLabel>Document Types</relationshipLabel>
        <relationshipName>Document_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Need_to_be_Updated_at_each_new_Transacti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need to be Updated at each new Transacti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optional_for_Transactio_Type__c</fullName>
        <globalPicklist>Transaction_Types</globalPicklist>
        <label>Optional for Transactio Type</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Required_for_Transaction_Type__c</fullName>
        <globalPicklist>Transaction_Types</globalPicklist>
        <label>Required for Transaction Type</label>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Document Type</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Document Type Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>